--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,11 @@ body {
     font-size: 14px;
     line-height: 1.7;
 }  
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: url('photo@2x.png');
+  }
 .img {
     display: block;
 }
