--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
   --page-width: 1440px;
   --section-width: 1200px;
   --transition-duration-and-func: 250ms linear;
+  --mobile: 320px;
+  --tablet: 767px;
 }
 body {  
     margin: 0;
@@ -24,11 +26,6 @@ body {
     font-size: 14px;
     line-height: 1.7;
 }  
-@media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-    background-image: url('photo@2x.png');
-  }
 .img {
     display: block;
 }
@@ -38,9 +35,11 @@ body {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
-    width: 1158px;
+    max-width: 1158px;
+    min-width: 320px;
     margin: auto;
     padding: 0 15px;
+    align-items: baseline
 }
 .active-menu link {
     position: relative;
@@ -57,6 +56,11 @@ body {
 .main-nav {
     display: flex;
     align-items: center;
+}
+@media (max-width: 767px) {
+    .main-nav {
+      flex: 1;
+    }
 }
 .main-nav .logo {
     padding: 24px 0;
@@ -82,6 +86,11 @@ body {
     display: flex;
     gap: 40px;
 } 
+@media (max-width: 767px) {
+    .menu {
+      display: none;
+    }
+}
 .menu-link {
     text-decoration: none;
     padding: 24px 0;
@@ -110,6 +119,29 @@ body {
     background-color: #404bbf;
     border-radius: 2px;
 }
+.burger-menu {
+    background: none;
+    border: 0;
+}
+
+@media (min-width: 768px) {
+    .burger-menu {
+        display: none;
+    }
+}
+.icon-burger-menu {
+    color: #2E2F42;
+}
+.icon-burger-menu use {
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+}
+@media (max-width: 767px) {
+    .header address {
+      display: none;
+    }
+  }
 .contact-info {
     display: flex;
     margin: 0;
@@ -117,18 +149,29 @@ body {
     list-style: none;
     margin-left: auto;
     position: absolute;
+    font-size: 16px;
+    line-height: 24px;
     right: 38px;
     top: 32px;
     gap: 40px;
 }
+@media (max-width: 1023px) {
+    .contact-info {
+        gap: 12px;
+        top: 16px;
+        font-size: 12px;
+        line-height: 14px;
+        flex-direction: column;
+    }
+  }
 .contact-info-link {
     display: flex;
     text-decoration: none;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: inherit;
+    line-height: inherit;
     letter-spacing: 0.02em;
     color: var(--main-cl);
     gap: 40px;
@@ -154,6 +197,11 @@ body {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     text-align: center;
 }
+@media (max-width: 767px) {
+    .promo {
+      padding: 112px 0;
+    }
+  }
 .promo .container {
     position: relative;
     z-index: 1;
@@ -169,6 +217,13 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
 }
+@media (max-width: 767px) {
+    .promo-title {
+        font-size: 36px;
+        line-height: 40px;
+    }
+}
+
 .promo-button {
     margin: 0 auto;
     display: block;
@@ -200,6 +255,11 @@ body {
 .features {
     padding: 120px 0;
 }
+@media (max-width: 1023px) {
+    .features {
+        padding: 96px 0;
+    }
+}
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -219,7 +279,27 @@ body {
     list-style: none;
     gap: 24px;
 }
-
+@media (max-width: 767px) {
+    .features-list {
+        text-align: center;
+    }
+}
+@media (max-width: 1023px) {
+    .features-list {
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+}
+@media (min-width: 768px) {
+    .features-item {
+        width: calc(50% - 12px);
+    }
+}
+@media (min-width: 1024px) {
+    .features-item {
+        width: auto;
+    }
+}
 .features-icon-container {
     display: flex;
     justify-content: center;
@@ -229,6 +309,11 @@ body {
     width: 264px;
     background: var(--light-gray-color);
     border-radius: 4px;
+}
+@media (max-width: 1023px) {
+    .features-icon-container {
+        display: none;
+    }
 }
 .features-icon-container .icon {
     width: 64px;
@@ -244,6 +329,13 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-cl);
 }
+@media (max-width: 1023px) {
+    .features-title {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 40px;
+    }
+}
 .features-descr {
     margin: 0;
     font-family: 'Roboto';
@@ -254,9 +346,19 @@ body {
     letter-spacing: 0.02em;
     color: var(--main-cl);
 }
+@media (max-width: 1023px) {
+    .features-descr {
+        font-weight: 500;
+    }
+}
 /*Section our-work*/
 .our-work {
     padding: 0 0 120px;
+}
+@media (max-width: 1023px) {
+    .our-work {
+        display: none;
+    }
 }
 .our-work-list {
     display: flex;
@@ -279,6 +381,11 @@ body {
     padding: 120px 0;
     background-color: var(--light-gray-color);
 }
+@media (max-width: 1023px) {
+    .team {
+        padding: 96px 0;
+    }
+}
 .section-title {
     margin-bottom: 72px;
     margin-top: 0;
@@ -297,6 +404,20 @@ body {
     list-style: none;
     gap: 24px;
 }
+@media (max-width: 1023px) {
+    .team-list {
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        justify-content: center;
+        width: 600px;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 767px) {
+    .team-list {
+        width: 264px;
+    }
+}
 .section-name-position {
     box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 2px 1px rgba(46, 47, 66, 0.08);
     padding: 32px 0;
@@ -308,6 +429,11 @@ body {
     background: var(--primary-white-color);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
+}
+@media (max-width: 1023px) {
+    .team-item {
+        width: 264px;
+    }
 }
 .team-title {
     margin: 0 0 8px 0;
@@ -366,6 +492,11 @@ body {
     padding-bottom: 120px;
     padding-top: 120px;
 }
+@media (max-width: 1023px) {
+    .customers {
+        padding: 96px 0;
+    }
+}
 .customers-list {
     display: flex;
     margin: 0;
@@ -373,9 +504,34 @@ body {
     list-style: none;
     gap: 24px;
 }
+@media (max-width: 1023px) {
+    .customers-list {
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        justify-content: center;
+        width: 600px;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 767px) {
+    .customers-list {
+        width: auto;
+    }
+}
 .customers-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
+}
+@media (max-width: 1023px) {
+    .customers-item {
+        width: 168px;
+    }
+}
+@media (max-width: 767px) {
+    .customers-item {
+        max-width: 190px;
+        width: calc(50% - 12px);
+    }
 }
 .customers-link {
     display: flex;
@@ -410,9 +566,27 @@ body {
 .footer-inner {
     display: flex;
 } 
+@media (max-width: 1023px) {
+    .footer-inner {
+        flex-wrap: wrap;
+    }
+}
+@media (max-width: 767px) {
+    .footer-inner {
+        flex-direction: column;
+        align-items: center;
+        gap: 72px;
+        text-align: center;
+    }
+}
 .footer-info {
     margin-right: 120px;
 } 
+@media (max-width: 767px) {
+    .footer-info {
+        margin: 0;
+    }
+}
 .footer .logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -498,6 +672,12 @@ body {
 .subscribe {
     padding: 80px 0 80px 80px;
 }
+@media (max-width: 1023px) {
+    .subscribe {
+        flex: 1;
+        padding: 0;
+    }
+}
 .subscribe-title {
     margin-bottom: 16px;
     font-weight: 500;
@@ -509,6 +689,11 @@ body {
 .subscribe-form {
     display: flex;
     gap: 24px;
+}
+@media (max-width: 767px) {
+    .subscribe-form {
+        flex-direction: column;
+    }
 }
 .subscribe-form-input {
     width: 264px;
@@ -543,6 +728,12 @@ body {
     border: none; 
     border-radius: 4px;
 }
+@media (max-width: 767px) {
+    .subscribe-button {
+        width: 165px;
+
+    }
+}
 .subscribe-icon {
     margin-left: 16px;
 }
@@ -568,11 +759,22 @@ body {
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (max-width: 767px) {
+    .modal {
+        width: calc(100% - 36px);
+        max-width: 392px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 18px;
+    }
+}
 .modal-contact-form {
     margin-bottom: 8px;
 }
 .modal-form-title {
     font-family: 'Roboto';
+    margin-top: 0;
+    margin-bottom: 17px;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -581,7 +783,8 @@ body {
     letter-spacing: 0.02em;
     color: #2E2F42;    
 }
-.modal-close-button {
+.modal-close-button,
+.js-close-menu {
     position: absolute;
     top: 24px;
     right: 24px;
@@ -598,15 +801,18 @@ body {
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-icon {
+.modal-close-icon,
+.js-close-menu .close-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-button:hover {
+.modal-close-button:hover,
+.js-close-menu:hover {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
 }
-.modal-close-button:focus {
+.modal-close-button:focus,
+.js-close-menu:focus {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
@@ -638,6 +844,11 @@ body {
 }
 .modal-form-field-comment {
     margin-bottom: 16px;
+}
+@media (max-width: 767px) {
+    .modal-form-field-comment {
+        margin-bottom: 4px;
+    }
 }
 .contact-form-input-wrapper {
     position: relative;
@@ -708,6 +919,11 @@ body {
 .modal-form-checkbox {
     margin-bottom: 24px;
 }
+@media (max-width: 767px) {
+    .modal-form-checkbox {
+        margin-bottom: 18px;
+    }
+}
 .contact-form-checkbox {
     appearance: none;
     position: absolute;
@@ -762,9 +978,6 @@ body {
 }
 .projects {
     padding: 96px 0 120px;
-}
-.container {
-    align-items: baseline
 }
 .projects .filter {
     display: flex;
@@ -892,9 +1105,62 @@ body {
     margin: 0;
     line-height: 2.14;
 }
-.footer-inner-container {
-    align-items: baseline;
-    margin-right: 120px;
+
+.js-menu-container {
+    display: none;
+    flex-direction: column;
+    background: #fff;
+    position: absolute;
+    padding: 80px 40px 40px 40px;
+    top: 0;
+    justify-content: space-between;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 15;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.js-menu-container.is-open {
+    display: flex;
 }
 
-
+.js-menu-container .menu {
+    display: flex;
+    padding: 0;
+    flex-direction: column;
+    gap: 40px;
+}
+.js-menu-container .menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+}
+.js-menu-container .menu-link::after {
+    display: none;
+}
+.js-menu-container address {
+    display: block;
+    margin-bottom: 48px;
+}
+.js-menu-container .contact-info {
+    position: unset;
+    top: 0;
+    right: 0;
+    gap: 40px;
+}
+.js-menu-container .contact-info-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--cmainl);
+}
+.js-menu-container .contact-info-tel {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    color: var(--active-cl);
+}
+.js-menu-container .social-icon-container {
+    justify-content: space-between;
+}
